[build-system]
requires = ["setuptools"]

[project]
name = "serveradmintool"
authors = [{ name = "westwardfishdme", email = "westwardfishdme@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["requests", "icmplib"]
version = "1.2"

[tool.setuptools]
packages = ["sat", "sat.modules"]
