[build-system]
requires = ["setuptools"]

[project]
authors = [
  { name = "finch/westwardfishdme", email = "jvillanueva7@luc.edu" },
  { name = "developer email:", email = "westwardfishdme@gmail.com" },
]
name = "serveradmintool"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["requests", "icmplib"]
version = "2.0.3"

[project.scripts]
sat = "sat:start"

[tool.setuptools]
packages = [
  "sat",
  "sat.modules",
  "sat.modules.ansi",
  "sat.modules.connectivity",
  "sat.modules.errors",
  "sat.modules.log",
  "sat.modules.toml",
  "sat.modules.tables",
]
